[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/scripts/levels/9Duel.gd" type="Script" id=1]
[ext_resource path="res://scenes/env/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/9Duel.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/Laser.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/env/DeathScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/backgrounds/BackgroundThirdAct.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/textures/backgrounds/act3_boss.png" type="Texture" id=7]
[ext_resource path="res://scenes/textures/enemies/zeppelin_boss1.png" type="Texture" id=8]
[ext_resource path="res://scenes/textures/enemies/zeppelin_boss2.png" type="Texture" id=9]
[ext_resource path="res://scenes/textures/enemies/zeppelin_boss3.png" type="Texture" id=10]
[ext_resource path="res://scenes/textures/enemies/zeppelin_boss4.png" type="Texture" id=11]
[ext_resource path="res://scenes/textures/enemies/zeppelin_boss5.png" type="Texture" id=12]
[ext_resource path="res://scenes/textures/enemies/zeppelin_field1.png" type="Texture" id=13]
[ext_resource path="res://scenes/textures/enemies/zeppelin_field2.png" type="Texture" id=14]
[ext_resource path="res://scenes/textures/enemies/zeppelin_field3.png" type="Texture" id=15]
[ext_resource path="res://scenes/misc/Explosion.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/textures/env/wall_bricks.png" type="Texture" id=17]
[ext_resource path="res://scenes/textures/backgrounds/laser_guns.png" type="Texture" id=18]
[ext_resource path="res://scenes/textures/backgrounds/laser1.png" type="Texture" id=19]
[ext_resource path="res://scenes/textures/backgrounds/laser2.png" type="Texture" id=20]
[ext_resource path="res://scenes/textures/backgrounds/laser3.png" type="Texture" id=21]
[ext_resource path="res://scenes/env/HoloWall.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/env/TileMap.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/env/Lever.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/env/Button.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/Mirza.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/enemies/Cannon.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/env/Finish.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/env/Dialogue_node.tscn" type="PackedScene" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "zeppelin"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Zeppelin:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 626.538, 338.444 ), Vector2( 626.538, 310 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "zeppelin_death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Zeppelin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Zeppelin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 626.538, 338.444 ), Vector2( -401.588, 654.04 ) ]
}

[node name="9Duel" type="Node2D"]
script = ExtResource( 1 )

[node name="Pause" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="Beam" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 4 )
bus = "Effects"

[node name="DeathScreen" parent="." instance=ExtResource( 5 )]

[node name="BackgroundThirdAct" parent="." instance=ExtResource( 6 )]
editor/display_folded = true
layer = -1

[node name="zeppelin_default" parent="BackgroundThirdAct" index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false

[node name="Zeppelin" type="AnimatedSprite" parent="."]
editor/display_folded = true
position = Vector2( 626.538, 338.444 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="zeppelin_field1" type="Sprite" parent="Zeppelin"]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 13 )

[node name="zeppelin_field2" type="Sprite" parent="Zeppelin"]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 14 )

[node name="zeppelin_field3" type="Sprite" parent="Zeppelin"]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 15 )

[node name="ShieldTimer" type="Timer" parent="Zeppelin"]
wait_time = 4.0
one_shot = true

[node name="ShotTimer" type="Timer" parent="Zeppelin"]
wait_time = 1.5
one_shot = true

[node name="Explosion1" parent="." instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( 175.095, 486.887 )
rotation = 0.698129

[node name="Explosion2" parent="." instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( 623.809, 461.945 )
rotation = 0.698129

[node name="Explosion3" parent="." instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( 1076.05, 482.526 )
rotation = 0.698129

[node name="Shield1" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.717647 )
position = Vector2( 207.68, 376.621 )
scale = Vector2( 9.80814, 4 )
texture = ExtResource( 17 )

[node name="Shield2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.717647 )
position = Vector2( 643.149, 367.221 )
scale = Vector2( 10.5575, 4 )
texture = ExtResource( 17 )

[node name="Shield3" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.717647 )
position = Vector2( 1079.57, 369.522 )
scale = Vector2( 9.83696, 4 )
texture = ExtResource( 17 )

[node name="LaserGuns" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 100 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
centered = false

[node name="laser1" type="Sprite" parent="LaserGuns"]
visible = false
modulate = Color( 0.0823529, 0.501961, 0.054902, 1 )
position = Vector2( -235.957, -0.138809 )
scale = Vector2( 3, 1 )
texture = ExtResource( 19 )
centered = false

[node name="laser2" type="Sprite" parent="LaserGuns"]
visible = false
modulate = Color( 0.0823529, 0.501961, 0.054902, 1 )
position = Vector2( 0.231514, -86.1534 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 20 )
centered = false

[node name="laser3" type="Sprite" parent="LaserGuns"]
visible = false
modulate = Color( 0.0823529, 0.501961, 0.054902, 1 )
position = Vector2( -520.239, 0.487686 )
scale = Vector2( 2, 1 )
texture = ExtResource( 21 )
centered = false

[node name="LaserTimer" type="Timer" parent="LaserGuns"]
wait_time = 0.5
one_shot = true

[node name="HoloWall" parent="." instance=ExtResource( 22 )]
position = Vector2( 386.08, 639.251 )
rotation = 1.5708

[node name="TileMap" parent="." instance=ExtResource( 23 )]
tile_data = PoolIntArray( -458753, 20, 0, -524288, 20, 0, -524287, 20, 0, -524286, 20, 0, -524285, 20, 0, -524284, 20, 0, -524283, 20, 0, -524282, 20, 0, -524281, 20, 0, -524280, 20, 0, -524279, 20, 0, -524278, 20, 0, -524277, 20, 0, -524276, 20, 0, -524275, 20, 0, -524274, 20, 0, -524273, 20, 0, -524272, 20, 0, -524271, 20, 0, -524270, 20, 0, -524269, 20, 0, -524268, 20, 0, -393217, 20, 0, -458732, 20, 0, -327681, 20, 0, -393196, 20, 0, -262145, 20, 0, -327660, 20, 0, -196609, 20, 0, -262124, 20, 0, -131073, 20, 0, -196588, 20, 0, -65537, 20, 0, -131052, 20, 0, -1, 20, 0, -65516, 20, 0, 65535, 20, 0, 20, 20, 0, 131071, 20, 0, 65556, 20, 0, 196607, 20, 0, 131092, 20, 0, 262143, 20, 0, 196628, 20, 0, 327679, 20, 0, 262164, 20, 0, 393215, 20, 0, 327700, 20, 0, 458751, 20, 0, 393236, 20, 0, 524287, 20, 0, 458772, 20, 0, 589823, 20, 0, 524308, 20, 0, 655359, 20, 0, 589824, 15, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 25, 0, 589831, 26, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 15, 0, 589839, 15, 0, 589840, 15, 0, 589841, 15, 0, 589842, 15, 0, 589843, 15, 0, 589844, 20, 0, 720895, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 20, 0, 786431, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 20, 0, 720910, 20, 0, 720911, 20, 0, 720912, 20, 0, 720913, 20, 0, 720914, 20, 0, 720915, 20, 0, 720916, 20, 0, 786436, 20, 0, 786439, 20, 0, 851972, 20, 0, 851975, 20, 0, 917508, 20, 0, 917509, 20, 0, 917510, 20, 0, 917511, 20, 0 )

[node name="Lever1" parent="." instance=ExtResource( 24 )]
position = Vector2( 204.608, 568.466 )

[node name="Lever2" parent="." instance=ExtResource( 24 )]
position = Vector2( 773.373, 569.112 )

[node name="Lever3" parent="." instance=ExtResource( 24 )]
position = Vector2( 1094.03, 570.199 )

[node name="Button1" parent="." instance=ExtResource( 25 )]
position = Vector2( 31.712, 444 )
z_index = 0
on = true
enable_timer = true

[node name="Button2" parent="." instance=ExtResource( 25 )]
position = Vector2( 632.486, 503.728 )
z_index = 0
on = true
enable_timer = true

[node name="Button3" parent="." instance=ExtResource( 25 )]
position = Vector2( 1250.81, 444 )
z_index = 0
on = true
enable_timer = true

[node name="Mirza" parent="." instance=ExtResource( 26 )]
position = Vector2( 351.482, 529.122 )
camera_bounds = [ 0, 0, 1280, 720 ]

[node name="Cannon1" parent="." instance=ExtResource( 27 )]
position = Vector2( 490.287, -421.791 )
vertical = true
flip_h = true

[node name="Cannon2" parent="." instance=ExtResource( 27 )]
position = Vector2( 861.608, -425.396 )
vertical = true
flip_h = true

[node name="Finish" parent="." instance=ExtResource( 28 )]
position = Vector2( 740.036, 853.564 )
rotation = 1.5708
next_level = "10Baiterek1"
number_of_level = 9
boss = true
boss_name = "Воздушная эскадра Чёрных Колпаков"

[node name="dialogue_node1" parent="." instance=ExtResource( 29 )]
position = Vector2( 392.041, 512.744 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Да, вот лазерные торпеды и второй дирижабль", "Можно начинать душегубить.", "Жаль, нельзя стрелять с поднятым щитом", "end_dialogue" ]

[node name="dialogue_node2" parent="." instance=ExtResource( 29 )]
position = Vector2( 644.653, 560.312 )
scale = Vector2( 8, 1 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Сейчас дирижабли столкнутся, нужно уходить.", "Остался только главный корабль.", "end_dialogue" ]
active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "zeppelin"
anims/zeppelin = SubResource( 2 )
anims/zeppelin_death = SubResource( 3 )
[connection signal="timeout" from="Zeppelin/ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="Zeppelin/ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="animation_finished" from="Explosion1/AnimationPlayer" to="." method="_on_Explosion1_finished"]
[connection signal="animation_finished" from="Explosion2/AnimationPlayer" to="." method="_on_Explosion2_finished"]
[connection signal="animation_finished" from="Explosion3/AnimationPlayer" to="." method="_on_Explosion3_finished"]
[connection signal="timeout" from="LaserGuns/LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="lever_pressed" from="Lever1" to="." method="_on_lever1_pressed"]
[connection signal="lever_pressed" from="Lever2" to="." method="_on_lever2_pressed"]
[connection signal="lever_pressed" from="Lever3" to="." method="_on_lever3_pressed"]
[connection signal="button_pressed" from="Button1" to="." method="_on_button1_pressed"]
[connection signal="button_pressed" from="Button2" to="." method="_on_button2_pressed"]
[connection signal="button_pressed" from="Button3" to="." method="_on_button3_pressed"]
[connection signal="dialogue_finished" from="dialogue_node1" to="." method="_on_dialogue1_finished"]
[connection signal="dialogue_finished" from="dialogue_node2" to="." method="_on_dialogue2_finished"]

[editable path="BackgroundThirdAct"]

[editable path="Explosion1"]

[editable path="Explosion2"]

[editable path="Explosion3"]
